<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhiteBoard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialog_save_title">Save Name</string>
    <string name="dialog_save_button">Accept</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="about_us_title">Covent Systems</string>
    <string name="about_us_info">coventsystems.com</string>
    <string name="dialog_settings_title">Settings</string>
    <string name="version_number">Version 1.0</string>
    <string name="privacy_policy">Privacy Policy:</string>
    <string name="privacy_link">coventsystems.com/#!privacy-policy/cng7</string>
    <string name="credits">Credits:</string>
    <string name="rob">Rob Barrett</string>
    <string name="mark">Mark Stanford</string>
    <string name="alex">Alex Stanford</string>
    <string name="covent">coventsystems.com</string>
    
</resources>
