<?xml version="1.0" encoding="UTF-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp" 
    android:id="@+id/about_view">
    
    <ImageView
        android:id="@+id/about_background"
        android:layout_width="1800dp"
        android:layout_height="1800dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:adjustViewBounds="true"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_splash" />
    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="12dp"
        android:scaleType="fitXY"
        android:background="#80000000" >
        
            
            <TextView
        		android:id="@+id/about_version"
        		android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
   				android:textSize="24sp"
   			    android:padding="0dp"
     		   	android:textColor="@android:color/white"
    			android:text="@string/version_number" />
        
    </TableLayout>
    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="12dp"
        android:scaleType="fitXY"
        android:background="#80000000" >
        
        <TableRow android:id="@+id/tablePrivacy" >
            
            <TextView
        		android:id="@+id/about_privacy"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:textSize="24sp"
        		android:padding="0dp"
        		android:textColor="@android:color/white"
    			android:text="@string/privacy_policy" />
        </TableRow>
        
        <TableRow android:id="@+id/tablePolicy" >
            
            <TextView
        		android:id="@+id/about_policy"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textSize="12sp"
        		android:padding="0dp"
        		android:autoLink="web"
        		android:textColorLink="#99CC00"
    			android:text="@string/privacy_link" />
        </TableRow>
        
    </TableLayout>
    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:padding="12dp"
        android:scaleType="fitXY"
        android:background="#80000000" >
        
        <TableRow android:id="@+id/tableCredits" >
            
            <TextView
        		android:id="@+id/about_credits"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:textSize="24sp"
        		android:padding="0dp"
        		android:textColor="@android:color/white"
    			android:text="@string/credits" />
        </TableRow>
        
        <TableRow android:id="@+id/tableRob" >
            
            <TextView
        		android:id="@+id/about_rob"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:textSize="12sp"
        		android:padding="0dp"
        		android:textColor="@android:color/white"
    			android:text="@string/rob" />
        </TableRow>
        
        <TableRow android:id="@+id/tableMark" >
            
            <TextView
        		android:id="@+id/about_mark"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:textSize="12sp"
        		android:padding="0dp"
        		android:textColor="@android:color/white"
    			android:text="@string/mark" />
        </TableRow>
        
        <TableRow android:id="@+id/tableAlex" >
            
            <TextView
        		android:id="@+id/about_alex"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:textSize="12sp"
        		android:padding="0dp"
        		android:textColor="@android:color/white"
    			android:text="@string/alex" />
        </TableRow>
        
        <TableRow android:id="@+id/tableCovent" >
            
            <TextView
        		android:id="@+id/about_covent"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:gravity="center"
        		android:textSize="12sp"
        		android:padding="0dp"
        		android:autoLink="web"
        		android:textColorLink="#99CC00"
    			android:text="@string/covent" />
        </TableRow>
        
    </TableLayout>
    
</RelativeLayout>